--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "~1.11.0",
+    "lodash": "^4.17.4",
     "mongoose": "^4.11.10",
     "morgan": "~1.8.1",
+    "redis": "^2.8.0",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
