--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+    "engines": {
+    "node": "8.4.0"
+  },
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "~1.17.1",
