--- a/package.json
+++ b/package.json
@@ -11,18 +11,16 @@
     "node": "8.5.0"
   },
   "dependencies": {
-    "bluebird": "^3.5.0",
     "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
-    "debug": "^3.0.1",
+    "debug": "^3.1.0",
     "express": "~4.16.0",
     "jade": "~1.11.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "mongoose": "^4.11.10",
     "morgan": "~1.9.0",
     "redis": "^2.8.0",
-    "serve-favicon": "~2.4.2",
-    "snyk": "^1.45.0"
+    "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
